@@ -13,14 +13,13 @@ import javax.jdo.JDOObjectNotFoundException;
 import javax.jdo.PersistenceManager;
 import javax.jdo.Query;
 
-import com.google.appengine.api.datastore.Key;
-import com.google.appengine.api.datastore.KeyFactory;
-
 import teammates.client.remoteapi.RemoteApiClient;
 import teammates.storage.entity.Account;
 import teammates.storage.entity.Instructor;
 import teammates.storage.entity.Student;
 
+import com.google.appengine.api.datastore.Key;
+import com.google.appengine.api.datastore.KeyFactory;
 
 /**
  * Generate list of institutes and number of users per institute.
@@ -32,11 +31,11 @@ public class StatisticsPerInstitute extends RemoteApiClient {
             .getPersistenceManagerFactory("transactions-optional")
             .getPersistenceManager();
     
-    private int iterationCounter = 0;
-    
     private static final int INSTRUCTOR_INDEX = 0;
     private static final int STUDENT_INDEX = 1;
     private static final String UNKNOWN_INSTITUTE = "Unknown Institute";
+    
+    private int iterationCounter;
     
     private HashMap<String, String> courseIdToInstituteMap = new HashMap<String, String>();
     
@@ -44,8 +43,8 @@ public class StatisticsPerInstitute extends RemoteApiClient {
         StatisticsPerInstitute statistics = new StatisticsPerInstitute();
         statistics.doOperationRemotely();
     }
-    
-    
+
+    @Override
     @SuppressWarnings("unchecked")
     protected void doOperation() {
         
@@ -58,10 +57,12 @@ public class StatisticsPerInstitute extends RemoteApiClient {
         StatsBundle statsBundle = generateStatsPerInstitute(allStudents, allInstructors);
         List<InstituteStats> statsPerInstituteList = statsBundle.instituteStatsList;
         
-        String statsForUniqueStudentEmail =  generateUniqueStudentEmailStatsInWholeSystem(statsBundle.numOfAllStudentEmails,
-                                                                                          statsBundle.numOfUniqueStudentEmails);
-        String statsForUniqueInstructorEmail = generateUniqueInstructorEmailStatsInWholeSystem(statsBundle.numOfAllInstructorEmail,
-                                                                                               statsBundle.numOfUniqueInstructorEmails);
+        String statsForUniqueStudentEmail =
+                generateUniqueStudentEmailStatsInWholeSystem(statsBundle.numOfAllStudentEmails,
+                                                             statsBundle.numOfUniqueStudentEmails);
+        String statsForUniqueInstructorEmail =
+                generateUniqueInstructorEmailStatsInWholeSystem(statsBundle.numOfAllInstructorEmail,
+                                                                statsBundle.numOfUniqueInstructorEmails);
         
         print(statsPerInstituteList);
         System.out.println("\n\n" + "***************************************************" + "\n\n");
@@ -70,36 +71,32 @@ public class StatisticsPerInstitute extends RemoteApiClient {
         System.out.println("\n\n" + "***************************************************" + "\n\n");
         System.out.println(statsForUniqueInstructorEmail);
     }
-    
 
-    private String generateUniqueInstructorEmailStatsInWholeSystem(int totalCountOfEmails, int totalCountOfUniqueEmails){
-       
-        
+    private String generateUniqueInstructorEmailStatsInWholeSystem(int totalCountOfEmails, int totalCountOfUniqueEmails) {
+
         String result = "===============Unique Instructor Emails===============\n"
                         + "Format=> Total Unique Emails [Total Emails]\n"
                         + "===================================================\n"
                         + totalCountOfUniqueEmails + " [ " + totalCountOfEmails + " ]\n";
         return result;
     }
-    
-    
-    private boolean isTestingInstructorData(Instructor instructor){
+
+    private boolean isTestingInstructorData(Instructor instructor) {
         boolean isTestingData = false;
         
-        if(instructor.getEmail()!=null && instructor.getEmail().toLowerCase().endsWith(".tmt")){
+        if (instructor.getEmail() != null && instructor.getEmail().toLowerCase().endsWith(".tmt")) {
             isTestingData = true;
-        }       
+        }
         
         String instituteForInstructor = getInstituteForInstructor(instructor);
-        if(instituteForInstructor == null || instituteForInstructor.contains("TEAMMATES Test Institute")){
+        if (instituteForInstructor == null || instituteForInstructor.contains("TEAMMATES Test Institute")) {
             isTestingData = true;
-        } 
+        }
         
         return isTestingData;
     }
-    
-    
-    private String generateUniqueStudentEmailStatsInWholeSystem(int totalCountOfEmails, int totalCountOfUniqueEmails){
+
+    private String generateUniqueStudentEmailStatsInWholeSystem(int totalCountOfEmails, int totalCountOfUniqueEmails) {
        
         String result = "===============Unique Student Emails===============\n"
                         + "Format=> Total Unique Emails [Total Emails]\n"
@@ -108,59 +105,57 @@ public class StatisticsPerInstitute extends RemoteApiClient {
         return result;
     }
     
-    private boolean isTestingStudentData(Student student){
+    private boolean isTestingStudentData(Student student) {
         boolean isTestingData = false;
         
-        if(student.getEmail().toLowerCase().endsWith(".tmt")){
+        if (student.getEmail().toLowerCase().endsWith(".tmt")) {
             isTestingData = true;
-        }       
+        }
         
-        if(getInstituteForStudent(student).contains("TEAMMATES Test Institute")){
+        if (getInstituteForStudent(student).contains("TEAMMATES Test Institute")) {
             isTestingData = true;
-        } 
+        }
         
         return isTestingData;
     }
 
-    private StatsBundle generateStatsPerInstitute(List<Student> allStudents, List<Instructor> allInstructors){
-        HashMap<String, HashMap<Integer, HashSet<String>>> institutes = new HashMap<String, HashMap<Integer, HashSet<String>>>();
+    private StatsBundle generateStatsPerInstitute(List<Student> allStudents, List<Instructor> allInstructors) {
+        HashMap<String, HashMap<Integer, HashSet<String>>> institutes =
+                new HashMap<String, HashMap<Integer, HashSet<String>>>();
         
         HashSet<String> allInstructorEmailSet = new HashSet<String>();
         HashSet<String> allStudentEmailSet = new HashSet<String>();
         int studentEmailCounter = 0;
         int instructorEmailCounter = 0;
         
-        for (Instructor instructor : allInstructors){
+        for (Instructor instructor : allInstructors) {
             
-            if(isTestingInstructorData(instructor) || instructor.getEmail() == null){               
+            if (isTestingInstructorData(instructor) || instructor.getEmail() == null) {
                 continue;
             }
             
             String institute = getInstituteForInstructor(instructor);
             
-            if(!institutes.containsKey(institute)){               
+            if (!institutes.containsKey(institute)) {
                 institutes.put(institute, new HashMap<Integer, HashSet<String>>());
                 institutes.get(institute).put(INSTRUCTOR_INDEX, new HashSet<String>());
                 institutes.get(institute).put(STUDENT_INDEX, new HashSet<String>());
             }
-                institutes.get(institute).get(INSTRUCTOR_INDEX).add(instructor.getEmail().toLowerCase());
-                allInstructorEmailSet.add(instructor.getEmail().toLowerCase());
-                instructorEmailCounter ++;
-                updateProgressIndicator();
+            institutes.get(institute).get(INSTRUCTOR_INDEX).add(instructor.getEmail().toLowerCase());
+            allInstructorEmailSet.add(instructor.getEmail().toLowerCase());
+            instructorEmailCounter++;
+            updateProgressIndicator();
         }
 
-        
-        
-        
-        for(Student student : allStudents){
+        for (Student student : allStudents) {
             
-            if(isTestingStudentData(student) || student.getEmail() == null){
+            if (isTestingStudentData(student) || student.getEmail() == null) {
                 continue;
             }
             
             String institute = getInstituteForStudent(student);
             
-            if(!institutes.containsKey(institute)){               
+            if (!institutes.containsKey(institute)) {
                 institutes.put(institute, new HashMap<Integer, HashSet<String>>());
                 
                 institutes.get(institute).put(INSTRUCTOR_INDEX, new HashSet<String>());
@@ -168,8 +163,8 @@ public class StatisticsPerInstitute extends RemoteApiClient {
             }
             
             institutes.get(institute).get(STUDENT_INDEX).add(student.getEmail().toLowerCase());
-            allStudentEmailSet.add(student.getEmail().toLowerCase());  
-            studentEmailCounter ++;
+            allStudentEmailSet.add(student.getEmail().toLowerCase());
+            studentEmailCounter++;
             updateProgressIndicator();
         }
                 
@@ -187,23 +182,18 @@ public class StatisticsPerInstitute extends RemoteApiClient {
     }
     
     @SuppressWarnings("unchecked")
-    private String getInstituteForStudent(Student student){
+    private String getInstituteForStudent(Student student) {
         
-        String institute = courseIdToInstituteMap.get(student.getCourseId());
-        
-        if(institute != null){
-            return institute;
-        } else{
-            institute = UNKNOWN_INSTITUTE;
+        if (courseIdToInstituteMap.containsKey(student.getCourseId())) {
+            return courseIdToInstituteMap.get(student.getCourseId());
         }
-        
-        
+
         Query q = pm.newQuery(Instructor.class);
         q.declareParameters("String courseIdParam");
         q.setFilter("courseId == courseIdParam");
-        List<Instructor> instructorList = (List<Instructor>) q.execute(student.getCourseId());        
+        List<Instructor> instructorList = (List<Instructor>) q.execute(student.getCourseId());
         
-        institute = getInstituteForInstructors(instructorList);
+        String institute = getInstituteForInstructors(instructorList);
         
         courseIdToInstituteMap.put(student.getCourseId(), institute);
         
@@ -211,13 +201,13 @@ public class StatisticsPerInstitute extends RemoteApiClient {
         
     }
     
-    private String getInstituteForInstructors(List<Instructor> instructorList){
+    private String getInstituteForInstructors(List<Instructor> instructorList) {
         String institute = UNKNOWN_INSTITUTE;
         
-        for(Instructor instructor : instructorList){
+        for (Instructor instructor : instructorList) {
             
             String tempIns = getInstituteForInstructor(instructor);
-            if(tempIns != null){
+            if (tempIns != null) {
                 institute = tempIns;
                 break;
             }
@@ -227,24 +217,19 @@ public class StatisticsPerInstitute extends RemoteApiClient {
         return institute;
     }
     
-    private String getInstituteForInstructor(Instructor instructor){
-        
-        String institute = null;
-        
-        if(instructor.getGoogleId() == null){
-            return institute;
+    private String getInstituteForInstructor(Instructor instructor) {
+        if (instructor.getGoogleId() == null) {
+            return null;
         }
         
         Account account = getAccountEntity(instructor.getGoogleId());
-        if(account != null) {
+        if (account != null) {
             return account.getInstitute();
-            
-        } else {
-            return institute;
         }
+        
+        return null;
     }
-    
-    
+
     private Account getAccountEntity(String googleId) {
         
         try {
@@ -253,18 +238,15 @@ public class StatisticsPerInstitute extends RemoteApiClient {
             
             if (JDOHelper.isDeleted(account)) {
                 return null;
-            } 
+            }
             
             return account;
             
-        } catch (IllegalArgumentException iae){
-            return null;            
-        } catch(JDOObjectNotFoundException je) {
+        } catch (IllegalArgumentException | JDOObjectNotFoundException e) {
             return null;
         }
     }
-    
-    
+
     private void print(List<InstituteStats> statList) {
         System.out.println("===============Stats Per Institute=================");
         System.out.println("Format=> Instructors + Students = Total [Institute]");
@@ -276,10 +258,10 @@ public class StatisticsPerInstitute extends RemoteApiClient {
             int numInstructors = stats.instructorTotal;
             int numStudents = stats.studentTotal;
             int total = numInstructors + numStudents;
-            runningTotal += total; 
+            runningTotal += total;
             System.out.println(
-                    "["+i+"]" + numInstructors + "+" + numStudents + "=" 
-                            + total    + "{" + runningTotal + "}\t[" + stats.name + "]");
+                    "[" + i + "]" + numInstructors + " + " + numStudents + "="
+                            + total + "{" + runningTotal + "}\t[" + stats.name + "]");
         }
         
     }
@@ -297,29 +279,30 @@ public class StatisticsPerInstitute extends RemoteApiClient {
         return list;
     }
     
-    private void sortByTotalStudentsDescending(List<InstituteStats> list){
+    private void sortByTotalStudentsDescending(List<InstituteStats> list) {
         Collections.sort(list, new Comparator<InstituteStats>() {
+            @Override
             public int compare(InstituteStats inst1, InstituteStats inst2) {
                 //the two objects are swapped, to sort in descending order
-                return (new Integer(inst2.studentTotal).compareTo(new Integer(inst1.studentTotal)));
+                return Integer.valueOf(inst2.studentTotal).compareTo(Integer.valueOf(inst1.studentTotal));
             }
         });
     }
     
-    private void updateProgressIndicator(){
-        iterationCounter ++;       
-        if(iterationCounter%1000 == 0){           
-            System.out.print("------------------  iterations count:" + iterationCounter + "  ------------------------\n");
+    private void updateProgressIndicator() {
+        iterationCounter++;
+        if (iterationCounter % 1000 == 0) {
+            System.out.print("------------------ iterations count:" + iterationCounter + " ------------------------\n");
         }
     }
     
-    class InstituteStats{
+    class InstituteStats {
         String name;
         int studentTotal;
         int instructorTotal;
     }
     
-    class StatsBundle{
+    class StatsBundle {
         List<InstituteStats> instituteStatsList;
         int numOfUniqueStudentEmails;
         int numOfAllStudentEmails;
